<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppMarket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="classify">应用分类</string>
    <string name="download">下载管理</string>
    <string name="life">生活</string>
    <string name="car">车务</string>
    <string name="news">新闻</string>
    <string name="movie">影音</string>
    <string name="social">社交</string>
    <string name="tool">工具</string>
    <string name="can_uninstall">可卸载</string>
    <string name="can_update">可升级</string>
    <string name="can_install">可安装</string>
    <string name="update">更新</string>
    <string name="install">安装</string>
    <string name="ininstall">卸载</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="nickname">请输入账号</string>
    <string name="passport">请输入密码</string>
    <string name="repassport">请重新输入密码</string>
    <string name="username">账号</string>
    <string name="userpassport">密码</string>
    <string name="re_userpassport">确认</string>
    <string name="find_passport">找回密码</string>
    <string name="user_register">注册账号</string>
    <string name="update_all">全部更新</string>
    
    <!-- 刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="title_activity_application_manage">ApplicationManage</string>
    <string name="title_activity_application_classify">ApplicationClassify</string>
    <string name="title_activity_application_login">UserLogin</string>
    <string name="title_activity_application_register">UserRegister</string>
    <string name="title_activity_init">InitActivity</string>

</resources>
