<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/title"
        android:layout_height="60dp">
        <TextView 
            style="@style/ManageTitleText"
            android:text="@string/can_uninstall"
            />
        <TextView 
            style="@style/ManageTitleText"
            android:text="@string/can_update"
            />
        <TextView 
            style="@style/ManageTitleText"
            android:text="@string/can_install"
            />
    </LinearLayout>
    <ListView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg"
        android:dividerHeight="1dp"
        android:divider="@color/title"
        android:id="@+id/list">
    </ListView>
</LinearLayout>
