<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:id="@+id/applist"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="@color/title"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/back"
            android:layout_width="36dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/app_manage_tab_color"
            android:text="@string/login"
            android:textSize="22dp" />
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/login_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
        <EditText 
            android:id="@+id/nickname"
            android:layout_width="340dp"
            android:layout_height="46dp"
            android:background="@drawable/edittext_style"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="65dp"
            android:hint="@string/nickname"
            android:gravity="center_vertical"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/edit_font"
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:layout_alignLeft="@id/nickname"
        	android:layout_alignTop="@id/nickname"
        	android:layout_marginTop="9dip"
        	android:layout_marginLeft="3dip"/>
        
        <EditText 
            android:id="@+id/passport"
            android:inputType="textPassword"
            android:layout_width="340dp"
            android:layout_height="46dp"
            android:background="@drawable/edittext_style"
            android:layout_below="@id/nickname"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:paddingLeft="65dp"
            android:hint="@string/passport"
            android:gravity="center_vertical"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userpassport"
            android:textColor="@color/edit_font"
            android:textSize="20dp"
            android:paddingLeft="5dp"
            android:layout_alignLeft="@id/passport"
        	android:layout_alignTop="@id/passport"
        	android:layout_marginTop="9dip"
        	android:layout_marginLeft="3dip"/>
        
        <Button 
            android:id="@+id/btn_login"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_login"
            android:text="@string/login"
            android:textSize="22dp"
            android:textColor="@color/app_manage_tab_color"
            android:layout_below="@id/passport"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    

</LinearLayout>
